unpackaged/main/default/objects/Account/fields/DNP_Check_with_PO__c.field-meta.xml
<CustomField>
    <fullName>DNP_Check_with_PO__c</fullName>
    <inlineHelpText>Select YES if one should check with the PO before publicizing this organization&#39;s information.  Select NO if that is not necessary.</inlineHelpText>
    <label>DNP Check with PO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>