unpackaged/main/default/objects/Account/fields/DNP_External_Surveys__c.field-meta.xml
<CustomField>
    <fullName>DNP_External_Surveys__c</fullName>
    <inlineHelpText>Select YES if AJWS has permission to include organization&#39;s work &amp; name in external surveys. Select NO if we should not publicize in surveys.</inlineHelpText>
    <label>DNP External Surveys</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes but keep organization anonymous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>