unpackaged/main/default/objects/Account/fields/DNP_Notes__c.field-meta.xml
<CustomField>
    <fullName>DNP_Notes__c</fullName>
    <inlineHelpText>Additional DNP notes.</inlineHelpText>
    <label>DNP Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>