unpackaged/main/default/objects/Account/fields/DNP_Website__c.field-meta.xml
<CustomField>
    <fullName>DNP_Website__c</fullName>
    <inlineHelpText>Select YES if AJWS has permission to include organization&#39;s work &amp; name on the AJWS website. Select NO if we should not publicize on our website.</inlineHelpText>
    <label>DNP Website</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>