unpackaged/main/default/objects/Account/fields/Do_Not_Acknowledge__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Acknowledge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Acknowledge</label>
    <type>Checkbox</type>
</CustomField>