unpackaged/main/default/objects/Account/fields/Do_Not_Contact__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if all Household members should NOT be contacted in any way. Checking/un-checking will check/un-check the &quot;Do Not Contact&quot; box for all child Contacts + will check the &quot;Email Opt-Out&quot;  box for Emails.</inlineHelpText>
    <label>Do Not Contact</label>
    <type>Checkbox</type>
</CustomField>