unpackaged/main/default/objects/Account/fields/Do_Not_Exchange__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Exchange__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the Household information should not be included in list exchanges with other organizations.</inlineHelpText>
    <label>Do Not Exchange</label>
    <type>Checkbox</type>
</CustomField>