unpackaged/main/default/objects/Account/fields/Do_Not_List_in_Publications__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_List_in_Publications__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the Household information should not be included in AJWS or other publications.</inlineHelpText>
    <label>Do Not List in Publications</label>
    <type>Checkbox</type>
</CustomField>