unpackaged/main/default/objects/Account/fields/Do_Not_Mail__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if non of the Household members should receive regular mail (such as direct mail campaigns). Checking/un-checking will check/un-check the &quot;Do Mail&quot; box for all child Contacts (i.e. HH members).</inlineHelpText>
    <label>Do Not Mail</label>
    <type>Checkbox</type>
</CustomField>