unpackaged/main/default/objects/Account/fields/Do_Not_Meet__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Meet__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if non of the Household members should be contacted regarding scheduling a meeting. Checking/un-checking will check/un-check the &quot;Do Not Meet&quot; box for all child Contacts (i.e. HH members).</inlineHelpText>
    <label>Do Not Meet</label>
    <type>Checkbox</type>
</CustomField>