unpackaged/main/default/objects/Account/fields/Do_Not_Solicit__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Solicit__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if non of the Household members should be solicited.</inlineHelpText>
    <label>Do Not Solicit</label>
    <type>Checkbox</type>
</CustomField>