unpackaged/main/default/objects/Account/fields/Donor__c.field-meta.xml
<CustomField>
    <fullName>Donor__c</fullName>
    <inlineHelpText>Unique &#39;Account&#39; identifier. Auto-generated by the system when the record is created. Used for direct mailing pieces that need a shorter donor ID for response device scanning.</inlineHelpText>
    <label>Donor #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>