unpackaged/main/default/objects/Account/fields/Donor_Code__c.field-meta.xml
<CustomField>
    <fullName>Donor_Code__c</fullName>
    <inlineHelpText>Chart of Accounts Donor Code Issued for This Donor By Finance.</inlineHelpText>
    <label>Donor Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>