unpackaged/main/default/objects/Account/fields/Donor_Level__c.field-meta.xml
<CustomField>
    <fullName>Donor_Level__c</fullName>
    <inlineHelpText>Based on donor&#39;s giving in the current &amp; last 2FY. Set by automation. Can be Overridden by manually changing the level and checking the &#39;Override Level&#39; box. Once donor is designated &quot;Major Donor&quot; (10K or up), downgrade can only be done manually.</inlineHelpText>
    <label>Donor Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Designation</fullName>
            </value>
            <value>
                <fullName>Major Donor</fullName>
            </value>
            <value>
                <fullName>Institutional Giving</fullName>
            </value>
            <value>
                <fullName>Giving Vehicle</fullName>
            </value>
            <value>
                <fullName>Mid-Level Low</fullName>
            </value>
            <value>
                <fullName>Mid-Level High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>