unpackaged/main/default/objects/Account/fields/Donors__c.field-meta.xml
<CustomField>
    <fullName>Donors__c</fullName>
    <inlineHelpText>Donors (other than AJWS) Supporting Grantee.</inlineHelpText>
    <label>Donors</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>