unpackaged/main/default/objects/Account/fields/ED_Certified__c.field-meta.xml
<CustomField>
    <fullName>ED_Certified__c</fullName>
    <inlineHelpText>Is this DAF grantee ED certified?</inlineHelpText>
    <label>ED Certified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>