unpackaged/main/default/objects/Account/fields/ED_Certified_Expiration_Flag__c.field-meta.xml
<CustomField>
    <fullName>ED_Certified_Expiration_Flag__c</fullName>
    <formula>ED_Expires_Date__c &gt;= TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if Today &gt;= ED Expires Date.</inlineHelpText>
    <label>ED Certified Expiration Flag</label>
    <type>Checkbox</type>
</CustomField>