unpackaged/main/default/objects/Account/fields/ED_Expires_Date__c.field-meta.xml
<CustomField>
    <fullName>ED_Expires_Date__c</fullName>
    <inlineHelpText>Equivalency Determination expiration date.</inlineHelpText>
    <label>ED Expires Date</label>
    <type>Date</type>
</CustomField>