unpackaged/main/default/objects/Account/fields/EIN__c.field-meta.xml
<CustomField>
    <fullName>EIN__c</fullName>
    <inlineHelpText>The EIN is a unique nine-digit number assigned by the IRS to businesses operating in the United States. It is also known as the Tax Identification Number (TIN), Federal Employer Identification Number (FEIN) or the Federal Tax Identification Number.</inlineHelpText>
    <label>EIN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>