unpackaged/main/default/objects/Account/fields/Emergency_Donor__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Donor__c</fullName>
    <formula>of_Emergency_Donations__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if Donor ever made a donation to and emergency campaign. Based on the &quot;Number of Emergency Donations&quot; roll-up field, which counts donations made by this Account to a Humanitarian Response fund (e.g. fund 57).</inlineHelpText>
    <label>Emergency Donor</label>
    <type>Checkbox</type>
</CustomField>