unpackaged/main/default/objects/Account/fields/End_Beneficiary_Marginalized_Groups__c.field-meta.xml
<CustomField>
    <fullName>End_Beneficiary_Marginalized_Groups__c</fullName>
    <label>End Beneficiary Marginalized Groups</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Women (36+)</fullName>
            </value>
            <value>
                <fullName>AGYW (35 and under)</fullName>
            </value>
            <value>
                <fullName>ITGNCQ</fullName>
            </value>
            <value>
                <fullName>See Gender and/or Age Codes*</fullName>
            </value>
            <value>
                <fullName>Children of Sex Workers</fullName>
            </value>
            <value>
                <fullName>Civil Society Organizations</fullName>
            </value>
            <value>
                <fullName>Ethnic and/ Or Religious Minorities</fullName>
            </value>
            <value>
                <fullName>Farmers, Fisherfolk, Pastoralists, and Foresters</fullName>
            </value>
            <value>
                <fullName>Human Rights Defenders at RISK</fullName>
            </value>
            <value>
                <fullName>Incarcerated Persons</fullName>
            </value>
            <value>
                <fullName>Indigenous Peoples</fullName>
            </value>
            <value>
                <fullName>Internally Displaced Persons</fullName>
            </value>
            <value>
                <fullName>Laborers in the Informal Economy</fullName>
            </value>
            <value>
                <fullName>LGB</fullName>
            </value>
            <value>
                <fullName>LGB - LB</fullName>
            </value>
            <value>
                <fullName>Migrants</fullName>
            </value>
            <value>
                <fullName>People with Disabilities</fullName>
            </value>
            <value>
                <fullName>PLWHA</fullName>
            </value>
            <value>
                <fullName>Refugees</fullName>
            </value>
            <value>
                <fullName>Religious Minorities</fullName>
            </value>
            <value>
                <fullName>Sex Workers</fullName>
            </value>
            <value>
                <fullName>Soldiers</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>