unpackaged/main/default/objects/Account/fields/End_Beneficiary_of_Org__c.field-meta.xml
<CustomField>
    <fullName>End_Beneficiary_of_Org__c</fullName>
    <inlineHelpText>Please select all relevant codes of the end beneficiary(ies) for the organization. If they are marginalized or targeted based on gender/sex or age, select &quot;See Gender/Age Codes&quot;</inlineHelpText>
    <label>End Beneficiary of Org</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Population</fullName>
            </value>
            <value>
                <fullName>Adults (36+)</fullName>
            </value>
            <value>
                <fullName>Youth (35 and under)</fullName>
            </value>
            <value>
                <fullName>Civil Society Organizations</fullName>
            </value>
            <value>
                <fullName>Human Rights Defenders at RISK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>