unpackaged/main/default/objects/Account/fields/Ex_of_Security_Risk_Management_Plan__c.field-meta.xml
<CustomField>
    <fullName>Ex_of_Security_Risk_Management_Plan__c</fullName>
    <inlineHelpText>If yes, share one example of a security guideline or practice that you use.</inlineHelpText>
    <label>Security Risk Management Plan Example</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>