unpackaged/main/default/objects/Account/fields/Exclude_from_Automated_Emails__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Automated_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Exclude all organization contacts from system automated emails.</inlineHelpText>
    <label>Exclude from Automated Emails</label>
    <type>Checkbox</type>
</CustomField>