unpackaged/main/default/objects/Account/fields/Exclude_User_from_Fundraising_Automation__c.field-meta.xml
<CustomField>
    <fullName>Exclude_User_from_Fundraising_Automation__c</fullName>
    <formula>$User.Exclude_from_Fundraising_Automation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used in processes to exclude a user from automation during data migration</inlineHelpText>
    <label>Exclude User from Fundraising Automation</label>
    <type>Checkbox</type>
</CustomField>