unpackaged/main/default/objects/Account/fields/FCRA_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>FCRA_Expiration_Date__c</fullName>
    <inlineHelpText>Date at which FCRA registration expires.</inlineHelpText>
    <label>FCRA Expiration Date</label>
    <type>Date</type>
</CustomField>