unpackaged/main/default/objects/Account/fields/FCRA_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>FCRA_Registration_Number__c</fullName>
    <inlineHelpText>Provide the FCRA Registration Number.</inlineHelpText>
    <label>FCRA Registration Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>