unpackaged/main/default/objects/Account/fields/FCRA_Registration_Required__c.field-meta.xml
<CustomField>
    <fullName>FCRA_Registration_Required__c</fullName>
    <inlineHelpText>Is FCRA Registration Required?</inlineHelpText>
    <label>FCRA Registration Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>