unpackaged/main/default/objects/Account/fields/First_Gift_Appeal__c.field-meta.xml
<CustomField>
    <fullName>First_Gift_Appeal__c</fullName>
    <inlineHelpText>The Campaign on the first (hard-credit) gift for this Account. Set by NPSP rollup,</inlineHelpText>
    <label>First Gift Appeal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>