unpackaged/main/default/objects/Account/fields/First_Gift_Fund__c.field-meta.xml
<CustomField>
    <fullName>First_Gift_Fund__c</fullName>
    <inlineHelpText>The &#39;Fund&#39; on the first (hard-credit) gift for this Account. Rolled up by DLRS nightly from Opportunity (rolled-up to Opp from it&#39;s child GAUAs by another DLRS nightly roll-up).</inlineHelpText>
    <label>First Gift Fund</label>
    <type>TextArea</type>
</CustomField>