unpackaged/main/default/objects/Account/fields/First_Partial_Soft_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>First_Partial_Soft_Credit_Amount__c</fullName>
    <inlineHelpText>first gift amount for partial soft credits</inlineHelpText>
    <label>First Partial Soft Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>