unpackaged/main/default/objects/Account/fields/First_Partial_Soft_Credit_Gift__c.field-meta.xml
<CustomField>
    <fullName>First_Partial_Soft_Credit_Gift__c</fullName>
    <description>Date of first (partial soft-credit gift) made by this Account. See &quot;Combined First Gift Date&quot; for date of first gift overall (i.e. hard or soft credit) from this Account. Calculated by NPSP Customizable Rollups.</description>
    <inlineHelpText>Date of first (partial soft-credit gift) made by this Account. See &quot;Combined First Gift Date&quot; for date of first gift overall (i.e. hard or soft credit) from this Account. Calculated by NPSP Customizable Rollups.</inlineHelpText>
    <label>First Partial Soft Credit Gift</label>
    <type>Date</type>
</CustomField>