unpackaged/main/default/objects/Account/fields/First_Soft_Credit_Gift_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Soft_Credit_Gift_Date__c</fullName>
    <description>Date of first (soft-credit gift) made by this Account. See &quot;Combined First Gift Date&quot; for date of first gift overall (i.e. hard or soft credit) from this Account. Calculated by NPSP Customizable Rollups.</description>
    <inlineHelpText>Date of first (soft-credit gift) made by this Account. See &quot;Combined First Gift Date&quot; for date of first gift overall (i.e. hard or soft credit) from this Account. Calculated by NPSP Customizable Rollups.</inlineHelpText>
    <label>First Soft Credit Gift Date</label>
    <type>Date</type>
</CustomField>