unpackaged/main/default/objects/Account/fields/Formerly_Known_As__c.field-meta.xml
<CustomField>
    <fullName>Formerly_Known_As__c</fullName>
    <inlineHelpText>Former name for grantee/donor organization.</inlineHelpText>
    <label>Formerly Known As</label>
    <length>255</length>
    <type>Text</type>
</CustomField>