unpackaged/main/default/objects/Account/fields/Funder_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Funder_Relationship__c</fullName>
    <label>Funder Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>First funder</fullName>
            </value>
            <value>
                <fullName>Only funder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>