unpackaged/main/default/objects/Account/fields/Gift_Capacity_Rating_and_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Gift_Capacity_Rating_and_Estimate__c</fullName>
    <inlineHelpText>GGA Gift Capacity Rating and Estimate is an individual&#39;s capacity to make a gift over five years to their favorite institution</inlineHelpText>
    <label>Gift Capacity Rating and Estimate</label>
    <length>50</length>
    <type>Text</type>
</CustomField>