unpackaged/main/default/objects/Account/fields/GIFTS_ID__c.field-meta.xml
<CustomField>
    <fullName>GIFTS_ID__c</fullName>
    <inlineHelpText>For Grantee orgs moved from GIFTS this captured their GIFTS ID. Since CRM was brought over from Raiser&#39;s Edge this is used in automation (flow) to assign Grantee ID in Salesforce (the automation ensures donor Accounts are not assigned a grantee ID)</inlineHelpText>
    <label>GIFTS ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>