unpackaged/main/default/objects/Account/fields/Grantee_Security_Concerns_or_Threats__c.field-meta.xml
<CustomField>
    <fullName>Grantee_Security_Concerns_or_Threats__c</fullName>
    <inlineHelpText>If yes, briefly explain your current security concerns and threats.</inlineHelpText>
    <label>Grantee Security Concerns or Threats</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>