unpackaged/main/default/objects/Account/fields/Hard_Credit_in_Last_14_Months__c.field-meta.xml
<CustomField>
    <fullName>Hard_Credit_in_Last_14_Months__c</fullName>
    <label>Hard Credit in Last 14 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>