unpackaged/main/default/objects/Account/fields/Head_of_Org_s_Skype__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Org_s_Skype__c</fullName>
    <inlineHelpText>Please enter the Skype name for the head of the Grantee organization.</inlineHelpText>
    <label>Head of Organization&#39;s Skype</label>
    <length>50</length>
    <type>Text</type>
</CustomField>