unpackaged/main/default/objects/Account/fields/Head_of_Organization_Email__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Organization_Email__c</fullName>
    <inlineHelpText>Please enter the email address for the head of the Grantee org.</inlineHelpText>
    <label>Head of Organization Email</label>
    <type>Email</type>
</CustomField>