unpackaged/main/default/objects/Account/fields/Head_of_Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Organization_Name__c</fullName>
    <inlineHelpText>Please enter the name of the head of the Grantee organization.</inlineHelpText>
    <label>Head of Organization Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>