unpackaged/main/default/objects/Account/fields/Head_of_Organization_Phone__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Organization_Phone__c</fullName>
    <inlineHelpText>Please enter the phone number for the head of the Grantee organization.</inlineHelpText>
    <label>Head of Organization Phone</label>
    <type>Phone</type>
</CustomField>