unpackaged/main/default/objects/Account/fields/Head_of_Organization_Title__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Organization_Title__c</fullName>
    <inlineHelpText>Please enter the title for the head of the Grantee organization.</inlineHelpText>
    <label>Head of Organization Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>