unpackaged/main/default/objects/Account/fields/High_Current_Last_2_FY__c.field-meta.xml
<CustomField>
    <fullName>High_Current_Last_2_FY__c</fullName>
    <formula>If (max( Total_Combined_Credit_Current_FY__c , Total_Combined_Credit_Last_Year__c,  Total_Combined_Credit_Two_Years_Ago__c) = Total_Combined_Credit_Current_FY__c, Total_Combined_Credit_Current_FY__c, 

If (max( Total_Combined_Credit_Current_FY__c , Total_Combined_Credit_Last_Year__c,  Total_Combined_Credit_Two_Years_Ago__c) =  Total_Combined_Credit_Last_Year__c,  Total_Combined_Credit_Last_Year__c, Total_Combined_Credit_Two_Years_Ago__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The sum of all (hard/soft/partial-soft credit) gifts made by this Account in its &quot;best giving year&quot; out of the last 3 FYs (i.e. this year, last year and two years ago). Used in the automation that sets Donor Level and Current Ladder (See mass-actions scheduler app)</inlineHelpText>
    <label>High Current + Last 2 FY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>