unpackaged/main/default/objects/Account/fields/High_Risk_Grantee__c.field-meta.xml
<CustomField>
    <fullName>High_Risk_Grantee__c</fullName>
    <inlineHelpText>To note if the org has safety/security concerns and might be under email surveillance.</inlineHelpText>
    <label>High Risk Grantee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>