unpackaged/main/default/objects/Account/fields/Holiday_Solicitations_Only__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Solicitations_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Donor asked to be included on holiday mailings only.</inlineHelpText>
    <label>Holiday Solicitations Only</label>
    <type>Checkbox</type>
</CustomField>