unpackaged/main/default/objects/Account/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <inlineHelpText>Select the Industry for the donor organization/company.</inlineHelpText>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Arts &amp; Entertainment</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Food &amp; Beverage</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Pharma and Biotechnology</fullName>
            </value>
            <value>
                <fullName>Information &amp; Communications</fullName>
            </value>
            <value>
                <fullName>Legal Services; Manufacturing</fullName>
            </value>
            <value>
                <fullName>Museums &amp; Institutions;</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Nonprofit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Religious Institutions</fullName>
            </value>
            <value>
                <fullName>Retail &amp; Hospitality</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Transportation &amp; Aerospace</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>