unpackaged/main/default/objects/Account/fields/Informal_Greeting__c.field-meta.xml
<CustomField>
    <fullName>Informal_Greeting__c</fullName>
    <inlineHelpText>For Household Accounts, uses fields of non-excluded, ordered related Contacts. Generated automatically.</inlineHelpText>
    <label>Informal Greeting</label>
    <type>TextArea</type>
</CustomField>