unpackaged/main/default/objects/Account/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <formula>&quot;Number of Leadership or decision-making roles by gender – staff only. A decision making role is defined as one that guides the way programmatic work is designed and implemented, and does not include administrative or support roles.&quot; + BR() + BR() +

&quot;If you have questions or concerns about providing answers to this set of questions, speak with your AJWS contact person.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used in grantee portal.</inlineHelpText>
    <label>Instructions</label>
    <type>Text</type>
</CustomField>