unpackaged/main/default/objects/Account/fields/InterestProgram_Fit__c.field-meta.xml
<CustomField>
    <fullName>InterestProgram_Fit__c</fullName>
    <inlineHelpText>Used by IG.</inlineHelpText>
    <label>Interest/Program Fit</label>
    <type>TextArea</type>
</CustomField>